InventoryManagement/force-app/src/objects/RMA_Requests__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RMA Requests</relationshipLabel>
        <relationshipName>RMA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>RMA Case Number</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>RMA Requests</relationshipLabel>
        <relationshipName>RMA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DestinationLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>RMA Requests</relationshipLabel>
        <relationshipName>RMA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ETA_Date__c</fullName>
        <label>ETA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inbound_Tracking_Number__c</fullName>
        <label>Inbound Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor_Compensation_Status__c</fullName>
        <label>Labor Compensation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved_RTI</fullName>
                    <label>Approved/RTI</label>
                </value>
                <value>
                    <fullName>Invoice Sent</fullName>
                </value>
                <value>
                    <fullName>Payment Received</fullName>
                </value>
                <value>
                    <fullName>Denied - Ineligible</fullName>
                </value>
                <value>
                    <fullName>Denied - Not Supported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Labor_Reimbursement_Approval_Date__c</fullName>
        <label>Labor Reimbursement Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Labor_Reimbursement_Invoice_Created_Date__c</fullName>
        <label>Labor Reimbursement Invoice Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Labor_Reimbursement_Submitted_Date__c</fullName>
        <label>Labor Reimbursement Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Labor_Reimbursement_Total__c</fullName>
        <label>Labor Reimbursement Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.Vendor_Type__c</field>
                <operation>equals</operation>
                <value>Manufacturer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RMA Requests (Manufacturer)</relationshipLabel>
        <relationshipName>RMA_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outbound_Tracking_Number__c</fullName>
        <label>Outbound Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>RMA Requests</relationshipLabel>
        <relationshipName>RMA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_Approved_Date__c</fullName>
        <label>RMA Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Created_Date__c</fullName>
        <label>RMA Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Denial_Reason__c</fullName>
        <description>If an RMA was Denied Please provide a Reason</description>
        <label>RMA Denial Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacture Denial</fullName>
                </value>
                <value>
                    <fullName>Needs Additional Information</fullName>
                </value>
                <value>
                    <fullName>Out of Warranty</fullName>
                </value>
                <value>
                    <fullName>Warranty Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Received_Date__c</fullName>
        <label>RMA Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Request_Type__c</fullName>
        <label>RMA Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk Shipment</fullName>
                </value>
                <value>
                    <fullName>WO-Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Return_Checked_In_Date__c</fullName>
        <description>The date the office has verified the RMA Return has been received from the technician.</description>
        <inlineHelpText>The date the office has verified the RMA Return has been received from the technician.</inlineHelpText>
        <label>RMA Return Checked In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Return_Date__c</fullName>
        <inlineHelpText>Date materials were repackaged and shipped back to manufacturer</inlineHelpText>
        <label>RMA Return Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Return_Method__c</fullName>
        <label>RMA Return Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Return (Shipping Label)</fullName>
                </value>
                <value>
                    <fullName>Pallet - Sunpower</fullName>
                </value>
                <value>
                    <fullName>Pallet - ABB</fullName>
                </value>
                <value>
                    <fullName>Recycle / E-Waste</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Return_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RMA Return Needed?</description>
        <inlineHelpText>Do we need to Return the Defective Unit / Return Slip Included with New Unit?</inlineHelpText>
        <label>RMA Return Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMA_Shipped_Date__c</fullName>
        <label>RMA Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>RMA Request</relationshipLabel>
        <relationshipName>RMA_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending RMA Approval</fullName>
                    <default>true</default>
                    <label>Pending RMA Approval</label>
                </value>
                <value>
                    <fullName>RMA Approved - Pending Shipment</fullName>
                </value>
                <value>
                    <fullName>RMA Sent - Pending Arrival</fullName>
                </value>
                <value>
                    <fullName>RMA Partially Received</fullName>
                </value>
                <value>
                    <fullName>RMA Delivered - Pending Check In</fullName>
                </value>
                <value>
                    <fullName>RMA Received - Ready to Schedule</fullName>
                </value>
                <value>
                    <fullName>RMA Denied</fullName>
                </value>
                <value>
                    <fullName>RMA Pending Return</fullName>
                </value>
                <value>
                    <fullName>RMA Return Checked In</fullName>
                </value>
                <value>
                    <fullName>RMA Return Sent</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>RMA Requests</relationshipLabel>
        <relationshipName>RMARequests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>RMA Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Manufacturer__c</columns>
        <columns>Status__c</columns>
        <columns>Work_Order__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Inbound_Tracking_Number__c</columns>
        <columns>Labor_Compensation_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Labor_Reimbursement</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Labor_Compensation_Status__c</columns>
        <columns>Labor_Reimbursement_Total__c</columns>
        <columns>Labor_Reimbursement_Approval_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Labor_Compensation_Status__c</field>
            <operation>equals</operation>
            <value>Needed</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Pending RMA Approval,RMA Approved - Pending Shipment,RMA Denied</value>
        </filters>
        <filters>
            <field>Manufacturer__c</field>
            <operation>notContain</operation>
            <value>SunPower</value>
        </filters>
        <label>Labor Reimbursement - Needed</label>
    </listViews>
    <listViews>
        <fullName>Labor_Reimbursement_Denied</fullName>
        <columns>NAME</columns>
        <columns>Labor_Compensation_Status__c</columns>
        <columns>Labor_Reimbursement_Approval_Date__c</columns>
        <columns>Labor_Reimbursement_Invoice_Created_Date__c</columns>
        <columns>Labor_Reimbursement_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Labor_Compensation_Status__c</field>
            <operation>equals</operation>
            <value>Denied - Ineligible,Denied - Not Supported</value>
        </filters>
        <label>Labor Reimbursement - Denied</label>
    </listViews>
    <listViews>
        <fullName>Labor_Reimbursement_No_Status</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Labor_Compensation_Status__c</columns>
        <columns>Labor_Reimbursement_Total__c</columns>
        <columns>Labor_Reimbursement_Submitted_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Labor_Compensation_Status__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>RMA Delivered - Pending Check In,RMA Received - Ready to Schedule,RMA Pending Return,RMA Return Checked In,RMA Return Sent</value>
        </filters>
        <filters>
            <field>Created_Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Manufacturer__c</field>
            <operation>notContain</operation>
            <value>SunPower</value>
        </filters>
        <label>Labor Reimbursement - No Status</label>
    </listViews>
    <listViews>
        <fullName>Labor_Reimbursement_Pending</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Labor_Compensation_Status__c</columns>
        <columns>Labor_Reimbursement_Total__c</columns>
        <columns>Labor_Reimbursement_Approval_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Labor_Compensation_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Labor Reimbursement - Pending</label>
    </listViews>
    <listViews>
        <fullName>Labor_Reimbursement_SE_Approved</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Labor_Compensation_Status__c</columns>
        <columns>Labor_Reimbursement_Total__c</columns>
        <columns>Labor_Reimbursement_Approval_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Labor_Compensation_Status__c</field>
            <operation>equals</operation>
            <value>Approved_RTI</value>
        </filters>
        <label>Labor Reimbursement - Approved</label>
    </listViews>
    <listViews>
        <fullName>Labor_Reimbursement_Submitted</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Labor_Compensation_Status__c</columns>
        <columns>Labor_Reimbursement_Total__c</columns>
        <columns>Labor_Reimbursement_Submitted_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Labor_Compensation_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Labor Reimbursement - Submitted</label>
    </listViews>
    <listViews>
        <fullName>Open_RMA</fullName>
        <columns>NAME</columns>
        <columns>Manufacturer__c</columns>
        <columns>Status__c</columns>
        <columns>Work_Order__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Inbound_Tracking_Number__c</columns>
        <columns>Labor_Compensation_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending RMA Approval,RMA Approved - Pending Shipment,RMA Sent - Pending Arrival</value>
        </filters>
        <label>Open RMA</label>
    </listViews>
    <listViews>
        <fullName>RMA_Reimbursement_Queue</fullName>
        <columns>NAME</columns>
        <columns>Work_Order__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Labor_Compensation_Status__c</columns>
        <columns>Case_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Labor_Compensation_Status__c</field>
            <operation>contains</operation>
            <value>Needed,Submitted,Approved,Declined,Payment Received</value>
        </filters>
        <filters>
            <field>Manufacturer__c</field>
            <operation>notContain</operation>
            <value>Sun,Also</value>
        </filters>
        <label>RMA Reimbursement Queue</label>
    </listViews>
    <listViews>
        <fullName>SolarEdge</fullName>
        <columns>NAME</columns>
        <columns>Manufacturer__c</columns>
        <columns>Status__c</columns>
        <columns>Work_Order__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Inbound_Tracking_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manufacturer__c</field>
            <operation>contains</operation>
            <value>SolarEdge</value>
        </filters>
        <label>SolarEdge</label>
    </listViews>
    <nameField>
        <displayFormat>RMA-{0000}</displayFormat>
        <label>RMA Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>